# wnpp-crawler

./: .gitignore  README.md  crawler-wnpp-orphaned.py  pyproject.toml
.github/workflows/: crawler.yml
