[tool.poetry]
name = "wnpp-crawler"
version = "0.1.0"
description = ""
authors = ["Taihsiang Ho (tai271828) <e@tai271828.me>"]
readme = "README.md"
packages = [{include = "wnpp_crawler"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
